add: curd sample
